2000-08-24  Lauris Kaplinski  <lauris@helixcode.com>

	* camel-folder-summary.c (summary_build_content_info):
	Use UTF-8 as default
	* camel-mime-part-utils.c (simple_data_wrapper_construct_from_parser):
	Use UTF-8 as default
	* camel-mime-utils.c (rfc2047_decode_word): Use UTF-8
	
2000-08-17  Not Zed  <NotZed@HelixCode.com>

	* providers/mh/camel-mh-folder.c (mh_finalize): And here too.

	* providers/mbox/camel-mbox-folder.c (mbox_finalize): Close index
	on exit.

2000-08-23  Dan Winship  <danw@helixcode.com>

	* camel-mime-utils.c (header_address_list_format_append): put
	commas between addresses.

2000-08-22  Dan Winship  <danw@helixcode.com>

	* providers/imap/camel-imap-folder.c
	(imap_protocol_get_summary_specifier): use BODY.PEEK, not BODY, so
	we don't set the message \Seen.

2000-08-22  Christopher James Lahey  <clahey@helixcode.com>

	* providers/pop3/camel-pop3-store.c: Fixed a small warning.

2000-08-22  Peter Williams  <peterw@helixcode.com>

	* camel-service.c (camel_service_new): Connect automatically if the
	URL is not empty.
	(finalize): Disconnect automatically if connected.
	(camel_service_query_auth_types): Split	into two functions; one to
	be called if we're connected to an actual server (_connected), one
	to be called if we're just gauging the general authtypes supported
	(_generic).
	(is_connected): Remove.

	* camel-store.c (camel_store_get_folder): Don't connect explicitly to
	the service.

	* providers/nntp/camel-nntp-store.c (query_auth_types_generic): Split
	the query_auth_types function. Hook it up in _new.
	(finalize): Don't try to disconnect here.
	
	* providers/pop3/camel-pop3-store.c (query_auth_types_generic): Same.
	(finalize): Don't try to disconnect here.

	* providers/imap/camel-imap-store.c (query_auth_types_generic): Same.
	(finalize): Don't try to disconnect here.

	* providers/smtp/camel-smtp-transport.c (query_auth_types_generic): Split
	the query_auth_types (dummy, in this case) function. Hook it up in _new.